add vended_credentials config in declare table
