# java/lance-namespace-springboot-server/src/main/java/org/lance/namespace/server/springboot/model/CreateEmptyTableRequest.java
@@ -49,6 +49,8 @@ public class CreateEmptyTableRequest {
 
   private String location;
 
+  private Boolean vendCredentials;
+
   public CreateEmptyTableRequest identity(Identity identity) {
     this.identity = identity;
     return this;
@@ -158,6 +160,32 @@ public class CreateEmptyTableRequest {
     this.location = location;
   }
 
+  public CreateEmptyTableRequest vendCredentials(Boolean vendCredentials) {
+    this.vendCredentials = vendCredentials;
+    return this;
+  }
+
+  /**
+   * Whether to include vended credentials in the response `storage_options`. When true, the
+   * implementation should provide vended credentials for accessing storage. When not set, the
+   * implementation can decide whether to return vended credentials.
+   *
+   * @return vendCredentials
+   */
+  @Schema(
+      name = "vend_credentials",
+      description =
+          "Whether to include vended credentials in the response `storage_options`. When true, the implementation should provide vended credentials for accessing storage. When not set, the implementation can decide whether to return vended credentials. ",
+      requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("vend_credentials")
+  public Boolean getVendCredentials() {
+    return vendCredentials;
+  }
+
+  public void setVendCredentials(Boolean vendCredentials) {
+    this.vendCredentials = vendCredentials;
+  }
+
   @Override
   public boolean equals(Object o) {
     if (this == o) {
@@ -170,12 +198,13 @@ public class CreateEmptyTableRequest {
     return Objects.equals(this.identity, createEmptyTableRequest.identity)
         && Objects.equals(this.context, createEmptyTableRequest.context)
         && Objects.equals(this.id, createEmptyTableRequest.id)
-        && Objects.equals(this.location, createEmptyTableRequest.location);
+        && Objects.equals(this.location, createEmptyTableRequest.location)
+        && Objects.equals(this.vendCredentials, createEmptyTableRequest.vendCredentials);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(identity, context, id, location);
+    return Objects.hash(identity, context, id, location, vendCredentials);
   }
 
   @Override
@@ -186,6 +215,7 @@ public class CreateEmptyTableRequest {
     sb.append("    context: ").append(toIndentedString(context)).append("\n");
     sb.append("    id: ").append(toIndentedString(id)).append("\n");
     sb.append("    location: ").append(toIndentedString(location)).append("\n");
+    sb.append("    vendCredentials: ").append(toIndentedString(vendCredentials)).append("\n");
     sb.append("}");
     return sb.toString();
   }
